<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_buddymatch"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_buddymatch" />

    <item
        android:id="@+id/navigation_broadcast"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_broadcast" />

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_community" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_you"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_you" />

</menu>