<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_sign_in"
    tools:context=".ui.auth.SignInActivity"
    android:id="@+id/signInRootView">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/regular"
        android:text="@string/sign_in"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/purple"
        android:fontFamily="@font/regular"
        android:text="@string/sign_up"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/continueSignInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/regular"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingVertical="16dp"
        android:paddingStart="48dp"
        android:paddingEnd="16dp"
        android:text="@string/cont"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:icon="@drawable/ic_arrow_right_24"
        app:iconGravity="end"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearance="@style/BottomButton" />

    <EditText
        android:id="@+id/emailSignInEditText"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="300dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edit_text"
        android:elevation="8dp"
        android:fontFamily="@font/light"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="12dp"
        android:textColor="#000000"
        android:textColorHint="#74768f"
        android:windowSoftInputMode="adjustResize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordSignInEditText"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edit_text"
        android:elevation="8dp"
        android:fontFamily="@font/light"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="12dp"
        android:textColor="#000000"
        android:textColorHint="#74768f"
        android:windowSoftInputMode="adjustResize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailSignInEditText" />

    <Button
        android:id="@+id/forgotPasswordSignInButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignInEditText" />

    <Button
        android:id="@+id/nusnetSignInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/regular"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingHorizontal="24dp"
        android:text="@string/login_with_nusnet"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:icon="@drawable/nus"
        app:iconGravity="end"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordSignInButton"
        app:layout_constraintVertical_bias="0.165"
        app:shapeAppearance="@style/SideButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
