<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="24dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:backgroundTint="@color/orange"
        android:padding="8dp"
        app:cardCornerRadius="24dp">

        <ImageView
            android:id="@+id/userImageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/profilepicture" />

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/bold"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/userCourseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/regular"
            android:text="@string/course"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>