<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUpRootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_sign_up"
    tools:context=".ui.auth.SignUpActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/regular"
        android:text="@string/sign_in"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/purple"
        android:fontFamily="@font/regular"
        android:text="@string/sign_up"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueSignUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/regular"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingVertical="16dp"
        android:paddingStart="48dp"
        android:paddingEnd="16dp"
        android:text="@string/cont"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:icon="@drawable/ic_arrow_right_24"
        app:iconGravity="end"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearance="@style/BottomButton" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameSignUpEditText"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/rounded_edit_text"
        android:elevation="8dp"
        android:fontFamily="@font/light"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingHorizontal="12dp"
        android:textColor="#000000"
        android:textColorHint="#74768f"
        android:windowSoftInputMode="adjustResize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailSignUpEditText"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edit_text"
        android:elevation="8dp"
        android:fontFamily="@font/light"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="12dp"
        android:textColor="#000000"
        android:textColorHint="#74768f"
        android:windowSoftInputMode="adjustResize"
        app:layout_constraintTop_toBottomOf="@+id/nameSignUpEditText" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordSignUpEditText"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edit_text"
        android:elevation="8dp"
        android:fontFamily="@font/light"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="12dp"
        android:textColor="#000000"
        android:textColorHint="#74768f"
        android:windowSoftInputMode="adjustResize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailSignUpEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>