<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp">

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/userCardCheckable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:backgroundTint="@color/orange"
        android:padding="12dp"
        app:cardCornerRadius="24dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <soup.neumorphism.NeumorphCardView
                android:id="@+id/profilePictureViewContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:layout_marginStart="16dp">

                <ImageView
                    android:id="@+id/userImageView"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="6dp"
                    android:contentDescription="@string/add" />
            </soup.neumorphism.NeumorphCardView>

            <TextView
                android:id="@+id/userNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/bold"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintStart_toEndOf="@id/profilePictureViewContainer"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userCourseTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/regular"
                android:text="@string/course"
                android:textColor="#222222"
                android:textSize="18dp"
                app:layout_constraintStart_toEndOf="@id/profilePictureViewContainer"
                app:layout_constraintTop_toBottomOf="@+id/userNameTextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>
    </soup.neumorphism.NeumorphCardView>

</androidx.constraintlayout.widget.ConstraintLayout>